--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/assets/css/nav-bar.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Cellshop</title>
@@ -26,24 +39,101 @@
           <li><a href="#"> Suporte</a></li>
         </ul>
       </nav>
-    </header>
-    <section>
-      <div class="conteudo">
-        <img
-          src="https://lh6.googleusercontent.com/l1k5MjX2u8QqpWLIuDUMvV_wZ573m_E-lVbCG8ciW09BBtMGMqpwcqX77yP-ozc9hkMkzsKluzNxekdNoZUHOF2WhB9KW63qHCJUqrlPiQQ9u9xVM0T9JASIC3asw4SopSFiIZpg1a-i2BY8GOQSfw"
-          alt=""
-        />
-        <p>
-          As melhores ofertas você encontra aqui. Acesse nosso site e confira as
-          Condições.
-        </p>
+      <!-- <div class="carro">
+        <div
+          id="carouselExampleCaptions"
+          class="carousel slide"
+          data-bs-ride="false"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
+                class="d-block w-20"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>
+                  Some representative placeholder content for the first slide.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/assets/img/Melhor-Celular.jpg"
+                class="d-block w-20"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>
+                  Some representative placeholder content for the second slide.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
+                class="d-block w-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>
+                  Some representative placeholder content for the third slide.
+                </p>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
-    </section>
+    </header> -->
     <section>
       <h1>IOS</h1>
       <div class="produtos-ios">
         <img
-          src="https://lh3.googleusercontent.com/6GoS4q-ojVcYdkdA4Nh7o1xxYjlJ1Pn2gUCHIqapPs2c5FTltS0Emoi4_60igw9obdpDmsSlcWuw7Q91Xy66UIa3iCM7LglMYqgAaaGrO-26ujiEUqLwPhgThvCzPSG0H-5l11qUsrlqYR0XZBH3Hg"
+          src="/assets/img/3624889522_1GG - Paint 07_10_2022 20_10_24 (2).png"
           alt=""
         />
         <span>
@@ -52,20 +142,13 @@
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/jaK8yq-wcQjfAWMrSE6NC7YFcZHkCVPSIjH84jBTnAqrl3X-tH6GDh0UvBg5npIy98OZvsOCsZIhr1KpaOKk_MUsQaR_sKRoB-yRp3I0gbWRODcSRq_YKxHD4HOoYgbfRFfnf_-uO0wVloJ_jl2VJQ"
-          alt=""
-        />
         <span>
           Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
           <p>R$ 5.199,00</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/mNmJ4CpV0T6LnoG0Juq8Mg3qK8MJ2Y-tFPVULX3_C9TevyFfquuW_zI1a0cPtso5uDZ9ExKgcc5I3lucBfn_9ccYxe7iFgesKMEcba2_msbqTs3ysN1oGyiMySGSgQgr1q2UsREO3MowvZX3RQ3Z0w"
-          alt=""
-        />
+
         <span>
           iPhone 7 128GB Ouro Bom - Sem Touch ID / Face ID
           <p>R$ 10.813,95</p>
@@ -74,30 +157,21 @@
         </span>
       </div>
       <div class="produtos-ios">
-        <img
-          src="https://lh3.googleusercontent.com/6GoS4q-ojVcYdkdA4Nh7o1xxYjlJ1Pn2gUCHIqapPs2c5FTltS0Emoi4_60igw9obdpDmsSlcWuw7Q91Xy66UIa3iCM7LglMYqgAaaGrO-26ujiEUqLwPhgThvCzPSG0H-5l11qUsrlqYR0XZBH3Hg"
-          alt=""
-        />
+        <img src="/" alt="" />
         <span>
           Iphone 12 Apple 64gb Ios 5g Wi-Fi Tela 6.1'' Câmera 12mp - Roxo
           <p>R$ 4.099,00</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/jaK8yq-wcQjfAWMrSE6NC7YFcZHkCVPSIjH84jBTnAqrl3X-tH6GDh0UvBg5npIy98OZvsOCsZIhr1KpaOKk_MUsQaR_sKRoB-yRp3I0gbWRODcSRq_YKxHD4HOoYgbfRFfnf_-uO0wVloJ_jl2VJQ"
-          alt=""
-        />
+
         <span>
           Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
           <p>R$ 5.199,00</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/mNmJ4CpV0T6LnoG0Juq8Mg3qK8MJ2Y-tFPVULX3_C9TevyFfquuW_zI1a0cPtso5uDZ9ExKgcc5I3lucBfn_9ccYxe7iFgesKMEcba2_msbqTs3ysN1oGyiMySGSgQgr1q2UsREO3MowvZX3RQ3Z0w"
-          alt=""
-        />
+
         <span>
           iPhone 7 128GB Ouro Bom - Sem Touch ID / Face ID
           <p>R$ 10.813,95</p>
@@ -110,20 +184,13 @@
     <section>
       <h1>Androids</h1>
       <div class="produtos-android">
-        <img
-          src="https://lh5.googleusercontent.com/ZF6rcukK3NjuM4qdnUzowYAHb3H7O34wpcRGps0qm8XsRkgWjrlnAOhMTMn4643NtDzqPAiINyM3AWSN5e0ZHIFEDD5T38LmtCqpsfPCQT1XY9hKpKEcra7P_zPuGrFY_YdYo8k0zlIc9QncfG86_A"
-          alt=""
-        />
         <span>
           Smartphone Galaxy A13 128GB 4G Tela 6.6” Preto 1 UN Samsung
           <p>R$ 1.610,90</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/uCTy5qgRw5ASvq704Pl3K7URKr2nLDXouYugraoeWr7_jF9Z3k7Qcg8zjikx1-UFrZ_XWZZqfL1-xGvsQ-Ot8aO5lzPZgWN5X-fh0dPuQeeW3Lt5RM2xt87tPGnpRZQioXjaCqScvIqazGxedgRFWQ"
-          alt=""
-        />
+
         <span>
           Smartphone Samsung Galaxy A23 6.6" Octa Core 128GB 4GB Câmera
           Quádrupla - Preto - Quadriband
@@ -131,10 +198,6 @@
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/fMfQw-Q18l88zm3e6FkTi5qjoi-IK8j0nRneYNPkCAOudIziS5P6HFfKIVH6k76--2SFeR1XYIf_J9z-s3gHNrpiktFSWk6j2PnQOM9xGwbaZs5QoCwM-X8Jvnhcc6cwwiX8fNCicS3_RqrKz8eE6w"
-          alt=""
-        />
         <span>
           Smartphone Philco Hit P8 Rose Gold 32GB, 3GB de RAM, Tela de 6",
           Câmera Tripla Traseira 13MP + 0,3MP + 2MP Frontal 5MP Rosa
@@ -144,20 +207,12 @@
         </span>
       </div>
       <div class="produtos-android">
-        <img
-          src="https://lh5.googleusercontent.com/ZF6rcukK3NjuM4qdnUzowYAHb3H7O34wpcRGps0qm8XsRkgWjrlnAOhMTMn4643NtDzqPAiINyM3AWSN5e0ZHIFEDD5T38LmtCqpsfPCQT1XY9hKpKEcra7P_zPuGrFY_YdYo8k0zlIc9QncfG86_A"
-          alt=""
-        />
         <span>
           Smartphone Galaxy A13 128GB 4G Tela 6.6” Preto 1 UN Samsung
           <p>R$ 1.610,90</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/uCTy5qgRw5ASvq704Pl3K7URKr2nLDXouYugraoeWr7_jF9Z3k7Qcg8zjikx1-UFrZ_XWZZqfL1-xGvsQ-Ot8aO5lzPZgWN5X-fh0dPuQeeW3Lt5RM2xt87tPGnpRZQioXjaCqScvIqazGxedgRFWQ"
-          alt=""
-        />
         <span>
           Smartphone Samsung Galaxy A23 6.6" Octa Core 128GB 4GB Câmera
           Quádrupla - Preto - Quadriband
@@ -165,10 +220,7 @@
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </span>
-        <img
-          src="https://lh6.googleusercontent.com/fMfQw-Q18l88zm3e6FkTi5qjoi-IK8j0nRneYNPkCAOudIziS5P6HFfKIVH6k76--2SFeR1XYIf_J9z-s3gHNrpiktFSWk6j2PnQOM9xGwbaZs5QoCwM-X8Jvnhcc6cwwiX8fNCicS3_RqrKz8eE6w"
-          alt=""
-        />
+
         <span>
           Smartphone Philco Hit P8 Rose Gold 32GB, 3GB de RAM, Tela de 6",
           Câmera Tripla Traseira 13MP + 0,3MP + 2MP Frontal 5MP Rosa
@@ -179,41 +231,49 @@
       </div>
     </section>
     <article>
+      <h1>Sobre Nós</h1>
       <div class="sobre">
-        <h1>Sobre Nós</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quibusdam
-          soluta quaerat vitae optio earum laborum, dolor eligendi harum alias
-          dolorem, perferendis maiores architecto delectus commodi dolore libero
-          assumenda at! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Hic quibusdam soluta quaerat vitae optio earum laborum, dolor eligendi
-          harum alias dolorem, perferendis maiores architecto delectus commodi
-          dolore libero assumenda at!
-          <!-- <span>vcs podem modificar o texto não sei oq colocar aq</span> -->
-        </p>
+        <div class="image-float">
+          <img src="/assets/img/cellshop.png" alt="" />
+        </div>
+        <div class="sobre-texto">
+          <p>
+            Somos uma loja que vendemos celulares pelo melhor preço possível bla
+            bla blablablab<br />
+            <strong>Vcs podem modificar o texto</strong>
+            <!-- <span>vcs podem modificar o texto não sei oq colocar aq</span> -->
+          </p>
+        </div>
       </div>
     </article>
     <footer>
       <h1>Suporte</h1>
       <div class="suporte">
-        <form action="get">
-          <div class="area-de-envio">
-            <p>Houve algum problema com a nossa loja?</p>
-            <label for="email"
-              >Por favor ensira seu email para entramors em contato</label
-            >
-            <input
-              id="email"
-              type="email"
-              placeholder="exemplo@gmail.com123"
-              required
-            />
-            <button type="submit">Enviar</button>
-          </div>
-        </form>
+        <div class="area-de-envio">
+          <p>Está tendo algum problema com a nossa loja?</p>
+          <form
+            action="https://formsubmit.co/77a67f7a815745c63e4c8cc4293bed7b"
+            method="POST"
+          >
+            <div>
+              <label for="email">Por favor digite seu email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="email"
+                required
+              />
+            </div>
+            <div>
+              <label for="message">Mensagem</label> <br />
+              <input type="text" name="message" id="message" required />
+            </div>
+            <button type="submit" class="submit">Enviar</button>
+          </form>
+        </div>
       </div>
     </footer>
     <script src="/assets/js/mobile-navbar.js"></script>
-    <script src="/assets/js/getSubmit.js"></script>
   </body>
 </html>
