--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/assets/css/nav-bar.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/nav-bar.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Cellshop</title>
   </head>
   <body>
@@ -133,7 +133,7 @@
       <h1>IOS</h1>
       <div class="produtos-ios">
         <img
-          src="/assets/img/3624889522_1GG - Paint 07_10_2022 20_10_24 (2).png"
+          src="./assets/img/3624889522_1GG - Paint 07_10_2022 20_10_24 (2).png"
           alt=""
         />
         <span>
@@ -234,7 +234,7 @@
       <h1>Sobre Nós</h1>
       <div class="sobre">
         <div class="image-float">
-          <img src="/assets/img/cellshop.png" alt="" />
+          <img src="./assets/img/cellshop.png" alt="" />
         </div>
         <div class="sobre-texto">
           <p>
@@ -274,6 +274,6 @@
         </div>
       </div>
     </footer>
-    <script src="/assets/js/mobile-navbar.js"></script>
+    <script src="./assets/js/mobile-navbar.js"></script>
   </body>
 </html>
