--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./assets/css/nav-bar.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Cellshop</title>
   </head>
   <body>
@@ -39,7 +39,7 @@
           <li><a href="#"> Suporte</a></li>
         </ul>
       </nav>
-      <!-- <div class="carro">
+      <div class="carro">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
@@ -67,10 +67,10 @@
               aria-label="Slide 3"
             ></button>
           </div>
-          <div class="carousel-inner">
+          <div class="carousel-inner first">
             <div class="carousel-item active">
               <img
-                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
+                src="https://lh6.googleusercontent.com/eZwvBz4XNbudmmp1cVKfBzVWzLDNMTZ2e7AjRMhkOe8Eu0fjP-NSItiIDQV8I2q1kSYRwozfYPiHR8q3Mtxja_PnhiLYw4zaKcatE-VYKPwyCBoSpi-EJumlyH1-cyw5xO83HHgAPLimFmhxY2gNQw"
                 class="d-block w-20"
                 alt="..."
               />
@@ -83,7 +83,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="/assets/img/Melhor-Celular.jpg"
+                src="http://127.0.0.1:5500/assets/img/3624889522_1GG%20-%20Paint%2007_10_2022%2020_10_24%20(2).png"
                 class="d-block w-20"
                 alt="..."
               />
@@ -97,7 +97,7 @@
             <div class="carousel-item">
               <img
                 src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
-                class="d-block w-100"
+                class="d-block w-20"
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
@@ -128,105 +128,146 @@
           </button>
         </div>
       </div>
-    </header> -->
+    </header>
     <section>
       <h1>IOS</h1>
       <div class="produtos-ios">
-        <img
-          src="./assets/img/3624889522_1GG - Paint 07_10_2022 20_10_24 (2).png"
+        <div class="content-box">
+          <img
+          src="https://images.kabum.com.br/produtos/fotos/271490/iphone-12-64gb-branco-5g-tela-de-6-1-camera-dupla-12mp-selfie-12mp-mgj63br-a_1637786978_g.jpg"
           alt=""
         />
         <span>
-          Iphone 12 Apple 64gb Ios 5g Wi-Fi Tela 6.1'' Câmera 12mp - Roxo
-          <p>R$ 4.099,00</p>
+          <p>Phone 12 64GB Branco, 5G, Tela de 6.1, Câmera Dupla 12MP + Selfie 12MP
+          R$ 3.989,05</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
+        </div>
+        <div class="content-box">
+          <img src="https://http2.mlstatic.com/D_NQ_NP_605126-MLM51559383638_092022-O.webp" alt="">
+          <span>
+            <p>Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
+            R$ 5.199,00</p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
-        <span>
-          Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
-          <p>R$ 5.199,00</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
-        </span>
-
-        <span>
-          iPhone 7 128GB Ouro Bom - Sem Touch ID / Face ID
-          <p>R$ 10.813,95</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/131021/iphone-11-preto-128gb-mhdh3br-a_1605032842_g.jpg" alt="">
+          <span>
+            <p> 
+              Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
+              R$ 3.609,05
+            </p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
       </div>
       <div class="produtos-ios">
-        <img src="/" alt="" />
+        <div class="content-box">
+          <img
+          src="https://images.kabum.com.br/produtos/fotos/131034/iphone-se-branco-64gb-mhgq3br-a_1605020724_g.jpg"
+          alt=""
+        />
         <span>
-          Iphone 12 Apple 64gb Ios 5g Wi-Fi Tela 6.1'' Câmera 12mp - Roxo
-          <p>R$ 4.099,00</p>
+          <p>Iphone SE 64GB Branco, Tela 4.7, Câmera Traseira 12MP + Selfie 7MP
+          R$ 3.989,05</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
+        </div>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/346806/Iphone-13-Pro-Max-Apple-1tb-Verde-Alpino-Tela-De-6-7-5g-E-C-mera-Dupla-De-12-Mp_1667327939_g.jpg" alt="">
+          <span>
+            <p>Iphone 13 Pro Max Apple (1tb) Verde Alpino, Tela De 6.7, 5g E Câmera Dupla De 12 Mp
+            R$ 5.199,00</p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
-
-        <span>
-          Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
-          <p>R$ 5.199,00</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
-        </span>
-
-        <span>
-          iPhone 7 128GB Ouro Bom - Sem Touch ID / Face ID
-          <p>R$ 10.813,95</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
-        </span>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/233179/Iphone-11-Pro-Max-64GB-Prateado-Muito-Bom-Usado_1662386344_g.jpg" alt="">
+          <span>
+            <p>Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
+            R$ 3.609,05</p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
       </div>
       <!-- AAAAAAAAAAAAA PRA SEPARAR -->
-    </section>
-    <section>
       <h1>Androids</h1>
-      <div class="produtos-android">
+      <div class="produtos-ios">
+        <div class="content-box">
+          <img
+          src="https://images.kabum.com.br/produtos/fotos/265965/smartphone-motorola-moto-e20-32gb-2gb-ram-octa-core-camera-13mp-cinza-parg0031br_1637268858_g.jpg"
+          alt=""
+        />
         <span>
-          Smartphone Galaxy A13 128GB 4G Tela 6.6” Preto 1 UN Samsung
-          <p>R$ 1.610,90</p>
+          <p>Smartphone Motorola Moto E20, 32GB, 2GB RAM, Octa Core, Câmera 13MP, Cinza 
+          R$ 699,00</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
+        </div>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/333983/smartphone-moto-g52-128gb-ram-4gb-octa-core-camera-tripla-50mp-tela-de-6-6-preto-pau60018br_1652204990_g.jpg" alt="">
+          <span>
+            <p>Smartphone Moto G52 128GB, RAM 4GB, Octa Core, Câmera Tripla 50Mp, Tela de 6.6" Preto
+            R$ 1.148,55</p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
-
-        <span>
-          Smartphone Samsung Galaxy A23 6.6" Octa Core 128GB 4GB Câmera
-          Quádrupla - Preto - Quadriband
-          <p>R$ 1.569,91</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
-        </span>
-        <span>
-          Smartphone Philco Hit P8 Rose Gold 32GB, 3GB de RAM, Tela de 6",
-          Câmera Tripla Traseira 13MP + 0,3MP + 2MP Frontal 5MP Rosa
-          <p>R$ 579,00</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/131021/iphone-11-preto-128gb-mhdh3br-a_1605032842_g.jpg" alt="">
+          <span>
+            <p> 
+              Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
+              R$ 3.609,05
+            </p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
       </div>
-      <div class="produtos-android">
+      <div class="produtos-ios">
+        <div class="content-box">
+          <img
+          src="https://images.kabum.com.br/produtos/fotos/271490/iphone-12-64gb-branco-5g-tela-de-6-1-camera-dupla-12mp-selfie-12mp-mgj63br-a_1637786978_g.jpg"
+          alt=""
+        />
         <span>
-          Smartphone Galaxy A13 128GB 4G Tela 6.6” Preto 1 UN Samsung
-          <p>R$ 1.610,90</p>
+          <p>Phone 12 64GB Branco, 5G, Tela de 6.1, Câmera Dupla 12MP + Selfie 12MP
+          R$ 3.989,05</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
+        </div>
+        <div class="content-box">
+          <img src="https://http2.mlstatic.com/D_NQ_NP_605126-MLM51559383638_092022-O.webp" alt="">
+          <span>
+            <p>Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
+            R$ 5.199,00</p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
-        <span>
-          Smartphone Samsung Galaxy A23 6.6" Octa Core 128GB 4GB Câmera
-          Quádrupla - Preto - Quadriband
-          <p>R$ 1.569,91</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
-        </span>
-
-        <span>
-          Smartphone Philco Hit P8 Rose Gold 32GB, 3GB de RAM, Tela de 6",
-          Câmera Tripla Traseira 13MP + 0,3MP + 2MP Frontal 5MP Rosa
-          <p>R$ 579,00</p>
-          <button>Comprar</button>
-          <button>Add no carrinho</button>
+        <div class="content-box">
+          <img src="https://images.kabum.com.br/produtos/fotos/131021/iphone-11-preto-128gb-mhdh3br-a_1605032842_g.jpg" alt="">
+          <span>
+            <p> 
+              Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
+              R$ 3.609,05
+            </p>
+            <button>Comprar</button>
+            <button>Add no carrinho</button>
+          </span>
+        </div>
         </span>
       </div>
     </section>
