--- a/index.html
+++ b/index.html
@@ -21,24 +21,25 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./assets/css/nav-bar.css" />
+    <link rel="stylesheet" href="/assets/css/nav-bar.css">
     <link rel="stylesheet" href="/assets/css/style.css" />
     <title>Cellshop</title>
   </head>
   <body>
     <header>
       <nav>
-        <div class="logo">Cellshop</div>
-        <div class="menu-btn">
-          <i class="fa fa-bars fa-2x" onclick="menuShow()"></i>
-        </div>
-        <ul>
-          <li><a href="#" class="active">Principal</a></li>
-          <li><a href="#"> Produtos</a></li>
-          <li><a href="#"> Sobre</a></li>
-          <li><a href="#"> Suporte</a></li>
-        </ul>
+      <div class="logo">Cellshop</div>
+      <div class="menu-btn">
+        <i class="fa fa-bars fa-2x" onclick="menuShow()"></i>
+      </div>
+      <ul>
+        <li><a href="#" class="active">Principal</a></li>
+        <li><a href="#"> Produtos</a></li>
+        <li><a href="#"> Sobre</a></li>
+        <li><a href="#"> Suporte</a></li>
+      </ul>
       </nav>
+    </header>
       <div class="carro">
         <div
           id="carouselExampleCaptions"
