--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
   <body>
     <header>
       <nav>
-      <div class="logo">Cellshop</div>
+      <div class="logo">
+        <img src="https://cdn.discordapp.com/attachments/881672664417185814/1040349986120007700/cellshop_logo_resized_1.png" alt="">
+      </div>
       <div class="menu-btn">
         <i class="fa fa-bars fa-2x" onclick="menuShow()"></i>
       </div>
       <ul>
         <li><a href="#" class="active">Principal</a></li>
-        <li><a href="#"> Produtos</a></li>
-        <li><a href="#"> Sobre</a></li>
-        <li><a href="#"> Suporte</a></li>
+        <li><a href="#produtos"> Produtos</a></li>
+        <li><a href="#sobre"> Sobre</a></li>
+        <li><a href="#suporte"> Suporte</a></li>
       </ul>
       </nav>
     </header>
@@ -71,7 +73,7 @@
           <div class="carousel-inner first">
             <div class="carousel-item active">
               <img
-                src="https://lh6.googleusercontent.com/eZwvBz4XNbudmmp1cVKfBzVWzLDNMTZ2e7AjRMhkOe8Eu0fjP-NSItiIDQV8I2q1kSYRwozfYPiHR8q3Mtxja_PnhiLYw4zaKcatE-VYKPwyCBoSpi-EJumlyH1-cyw5xO83HHgAPLimFmhxY2gNQw"
+                src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/398660/Iphone-14-Pro-Max-Apple-512GB-Tela-De-6-7-5g-E-C-mera-De-48Mp-Dourado_1667503119_g.jpg"
                 class="d-block w-20"
                 alt="..."
               />
@@ -84,7 +86,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="http://127.0.0.1:5500/assets/img/3624889522_1GG%20-%20Paint%2007_10_2022%2020_10_24%20(2).png"
+                src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/239431/Usado-Iphone-XR-256GB-C-mera-12MP-Tela-6-1-Preto-Bom_1666881536_g.jpg"
                 class="d-block w-20"
                 alt="..."
               />
@@ -130,9 +132,9 @@
         </div>
       </div>
     </header>
-    <section>
+    <section id="produtos">
       <h1>IOS</h1>
-      <div class="produtos-ios">
+      <div class="produtos-content">
         <div class="content-box">
           <img
           src="https://images.kabum.com.br/produtos/fotos/271490/iphone-12-64gb-branco-5g-tela-de-6-1-camera-dupla-12mp-selfie-12mp-mgj63br-a_1637786978_g.jpg"
@@ -167,7 +169,7 @@
         </div>
         </span>
       </div>
-      <div class="produtos-ios">
+      <div class="produtos-content">
         <div class="content-box">
           <img
           src="https://images.kabum.com.br/produtos/fotos/131034/iphone-se-branco-64gb-mhgq3br-a_1605020724_g.jpg"
@@ -199,16 +201,16 @@
           </span>
         </div>
       </div>
-      <!-- AAAAAAAAAAAAA PRA SEPARAR -->
+
       <h1>Androids</h1>
-      <div class="produtos-ios">
+      <div class="produtos-content">
         <div class="content-box">
           <img
           src="https://images.kabum.com.br/produtos/fotos/265965/smartphone-motorola-moto-e20-32gb-2gb-ram-octa-core-camera-13mp-cinza-parg0031br_1637268858_g.jpg"
           alt=""
         />
         <span>
-          <p>Smartphone Motorola Moto E20, 32GB, 2GB RAM, Octa Core, Câmera 13MP, Cinza 
+          <p>Smartphone Motorola Moto E20, 32GB, 2GB RAM, Octa Core, Câmera 13MP, Cinza <br>
           R$ 699,00</p>
           <button>Comprar</button>
           <button>Add no carrinho</button>
@@ -216,7 +218,7 @@
         <div class="content-box">
           <img src="https://images.kabum.com.br/produtos/fotos/333983/smartphone-moto-g52-128gb-ram-4gb-octa-core-camera-tripla-50mp-tela-de-6-6-preto-pau60018br_1652204990_g.jpg" alt="">
           <span>
-            <p>Smartphone Moto G52 128GB, RAM 4GB, Octa Core, Câmera Tripla 50Mp, Tela de 6.6" Preto
+            <p>Smartphone Moto G52 128GB, RAM 4GB, Octa Core, Câmera Tripla 50Mp, Tela de 6.6" Preto <br>
             R$ 1.148,55</p>
             <button>Comprar</button>
             <button>Add no carrinho</button>
@@ -224,73 +226,67 @@
         </div>
         </span>
         <div class="content-box">
-          <img src="https://images.kabum.com.br/produtos/fotos/131021/iphone-11-preto-128gb-mhdh3br-a_1605032842_g.jpg" alt="">
-          <span>
-            <p> 
-              Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
-              R$ 3.609,05
-            </p>
-            <button>Comprar</button>
-            <button>Add no carrinho</button>
-          </span>
-        </div>
-        </span>
-      </div>
-      <div class="produtos-ios">
-        <div class="content-box">
-          <img
-          src="https://images.kabum.com.br/produtos/fotos/271490/iphone-12-64gb-branco-5g-tela-de-6-1-camera-dupla-12mp-selfie-12mp-mgj63br-a_1637786978_g.jpg"
+        <img
+          src="https://images.kabum.com.br/produtos/fotos/305781/smartphone-samsung-galaxy-s22-8gb-ram-128gb-camera-tripla-50mp-tela-6-1-preto-sm-s901ezkrzto_1644588895_g.jpg"
           alt=""
         />
         <span>
-          <p>Phone 12 64GB Branco, 5G, Tela de 6.1, Câmera Dupla 12MP + Selfie 12MP
-          R$ 3.989,05</p>
+          <p>S22 + smartphone Android 6.5 Polegada 8GB + 256GB Celular R$ 4.499,00</p> 
           <button>Comprar</button>
           <button>Add no carrinho</button>
         </div>
+        </span>
+      </div>
+      <div class="produtos-content">
         <div class="content-box">
-          <img src="https://http2.mlstatic.com/D_NQ_NP_605126-MLM51559383638_092022-O.webp" alt="">
+          <img src="https://images.kabum.com.br/produtos/fotos/353563/smartphone-philco-hit-p8-3gb-ram-32gb-octa-core-camera-13mp-tela-infinita-6-rose-gold-98253011_1655995775_g.jpg" alt="">
           <span>
-            <p>Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12
-            R$ 5.199,00</p>
+            <p>Philco Hit P8 Rose Gold 32GB, 3GB de RAM, Tela de 6", Câmera Tripla Traseira 13MP+ 2MP Frontal 5MP <br>
+            R$ 493,05</p>
             <button>Comprar</button>
             <button>Add no carrinho</button>
           </span>
         </div>
+        <div class="content-box">
+          <div class="content-box">
+            <img src="https://images.kabum.com.br/produtos/fotos/304365/smartphone-motorola-xt2175-1-moto-g200-4gb-ram-256gb-octa-core-camera-tripla-108mp-tela-6-8-azul-pash0005br_1642798346_g.jpg" alt="">
+            <span>
+              <p>
+                Smartphone Motorola Moto G200, 5G, 8GB RAM, 256GB, Octa Core, Câmera Tripla 108MP, Tela 6.8, Azul <br>
+                R$ 2.421,55
+              </p>
+              <button>Comprar</button>
+              <button>Add no carrinho</button>
+            </span>
+          </div>
+        </div>
         </span>
         <div class="content-box">
-          <img src="https://images.kabum.com.br/produtos/fotos/131021/iphone-11-preto-128gb-mhdh3br-a_1605032842_g.jpg" alt="">
+          <img src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/331610/Celular-Samsung-Galaxy-A-13-128gb-Dual-Sm-a135mzklzto_1661943533_g.jpg" alt="">
           <span>
-            <p> 
-              Iphone 11 128GB Preto, Tela 6.1, Câmera Dupla 12MP + Selfie 12MP
-              R$ 3.609,05
+            <p>
+              Smartphone Galaxy A13 128GB 4G Tela 6.6” Preto 1 UN Samsung <br>
+              R$ 1.199,00
             </p>
             <button>Comprar</button>
             <button>Add no carrinho</button>
-          </span>
-        </div>
         </span>
       </div>
     </section>
-    <article>
+    <article id="sobre">
       <h1>Sobre Nós</h1>
       <div class="sobre">
         <div class="image-float">
-          <img src="./assets/img/cellshop.png" alt="" />
+          <img src="https://cdn.discordapp.com/attachments/881672664417185814/1040347014703108137/cellshop_logo.png" alt="" />
         </div>
         <div class="sobre-texto">
-          <p>
-            Somos uma loja que vendemos celulares pelo melhor preço possível bla
-            bla blablablab<br />
-            <strong>Vcs podem modificar o texto</strong>
-            <!-- <span>vcs podem modificar o texto não sei oq colocar aq</span> -->
-          </p>
+          
         </div>
       </div>
     </article>
     <footer>
       <h1>Suporte</h1>
-      <div class="suporte">
+      <div class="suporte" id="suporte">
         <div class="area-de-envio">
           <p>Está tendo algum problema com a nossa loja?</p>
           <form
