--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
+                src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/192388/Usado-Xiaomi-Redmi-Note-8-64gb-Azul-Excelente_1662664722_g.jpg"
                 class="d-block w-20"
                 alt="..."
               />
