--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="//code.jivosite.com/widget/n7YV7BI35y" async></script>
     <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/881672664417185814/1040371860363284631/favicon-16x16.png" type="image/x-icon">
     <link
       rel="stylesheet"
@@ -43,7 +42,6 @@
         <li><a href="#suporte"> Suporte</a></li>
       </ul>
       </nav>
-    </header>
       <div class="carro">
         <div
           id="carouselExampleCaptions"
@@ -101,7 +99,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/192388/Usado-Xiaomi-Redmi-Note-8-64gb-Azul-Excelente_1662664722_g.jpg"
+                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
                 class="d-block w-20"
                 alt="..."
               />
@@ -249,7 +247,6 @@
             <button>Add no carrinho</button>
           </span>
         </div>
-        <div class="content-box">
           <div class="content-box">
             <img src="https://images.kabum.com.br/produtos/fotos/304365/smartphone-motorola-xt2175-1-moto-g200-4gb-ram-256gb-octa-core-camera-tripla-108mp-tela-6-8-azul-pash0005br_1642798346_g.jpg" alt="">
             <span>
@@ -261,7 +258,6 @@
               <button>Add no carrinho</button>
             </span>
           </div>
-        </div>
         </span>
         <div class="content-box">
           <img src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/331610/Celular-Samsung-Galaxy-A-13-128gb-Dual-Sm-a135mzklzto_1661943533_g.jpg" alt="">
@@ -282,7 +278,44 @@
           <img src="https://cdn.discordapp.com/attachments/881672664417185814/1040347014703108137/cellshop_logo.png" alt="" />
         </div>
         <div class="sobre-texto">
-          
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the f our  the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </article>
