--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
           </form>
         </div>
       </div>
+      <div class="feed">
+        <iframe src="https://feed.mikle.com/widget/v2/157942/?preloader-text=Loading" height="402px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+      </div>
     </footer>
     <script src="./assets/js/mobile-navbar.js"></script>
   </body>
