--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="//code.jivosite.com/widget/ooo45gLHRe" async></script>
+    <script src="//code.jivosite.com/widget/sE6l6QDr8a" async></script>
     <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/881672664417185814/1040371860363284631/favicon-16x16.png" type="image/x-icon">
     <link
       rel="stylesheet"
