--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="/assets/img/Celular Apple Iphone XR Branco 64GB Câmera 12MP 4G IOS 12 - Google Chrome 07_10_2022 20_15_16 (2).png"
+                src="https://images.kabum.com.br/produtos/fotos/166158/smartphone-samsung-galaxy-a22-128gb-4gb-ram-octa-core-camera-quadrupla-selfie-13mp-tela-infinita-6-4-5000mah-verde-sm-a225mlgrzto_1627061175_g.jpg"
                 class="d-block w-20"
                 alt="..."
               />
