--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/assets/css/nav-bar.css">
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/nav-bar.css"> 
+    <link rel="stylesheet" href="/assets/css/style.css" /> 
     <title>Cellshop</title>
   </head>
   <body>
@@ -79,7 +79,7 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
+                <h5>Melhores lançamentos de Smartphones só aqui!!!</h5>
                 <p>
                   Some representative placeholder content for the first slide.
                 </p>
@@ -87,12 +87,11 @@
             </div>
             <div class="carousel-item">
               <img
-                src="https://images.kabum.com.br/produtos/fotos/sync_mirakl/239431/Usado-Iphone-XR-256GB-C-mera-12MP-Tela-6-1-Preto-Bom_1666881536_g.jpg"
-                class="d-block w-20"
+                src="https://samsungbr.vtexassets.com/arquivos/ids/331116-1200-auto?width=1200&height=auto&aspect=true"
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
+                <h5>Com ofertas que cabem no seu bolso!!!</h5>
                 <p>
                   Some representative placeholder content for the second slide.
                 </p>
@@ -351,6 +350,6 @@
         <iframe src="https://feed.mikle.com/widget/v2/157942/?preloader-text=Loading" height="402px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
       </div>
     </footer>
-    <script src="./assets/js/mobile-navbar.js"></script>
+     <script src="./assets/js/mobile-navbar.js"></script>
   </body>
 </html>
